--- a/main.css
+++ b/main.css
@@ -129,7 +129,6 @@ html {
 	border-bottom: 1px solid grey;
 	margin-bottom: 2rem;
 }
-
 /*------------------------------------------------MEDIA----------------------------------------*/
 
 @media screen and (max-width: 767px) {
@@ -146,6 +145,9 @@ html {
 
 	.aboutUser__age input, .aboutUser__education select, .aboutUser__professions select, .aboutUser__experience input, .aboutUser__english select, .aboutUser__marriage select, .aboutUser__people input, .aboutUser__children input, .aboutUser__finance select, .contactsBlock input, .countriesBlock__live select {
 		width: 100%
+	}
+	.countriesBlock__immigration .checkBlock, .aboutUser__languages .checkBlock{
+		margin-right: 7rem;
 	}
 }
 
