--- a/app/pug/var/global.pug
+++ b/app/pug/var/global.pug
@@ -3,7 +3,7 @@
 	var path = {
 		src: {
 		css:  'css/main.css',
-		img: 'assets/img/',
-		bootstrap: 'css/bootstrap.css'
+		sprite: 'css/sprite.css',
+		img: 'assets/imgages/'
 		}      
 		};  
