--- a/app/pug/includes/head.pug
+++ b/app/pug/includes/head.pug
@@ -1,15 +1,18 @@
 head
-  meta(charset='utf-8')
-  meta(
-    name='viewport'
-    content='width=device-width, initial-scale=1.0'
-  )
-  title template
-  link(
-    rel='stylesheet'
-    href=path.src.css
-  )
-  link(
-  	rel='stylesheet'
-  	href="https://fonts.googleapis.com/css?family=Open+Sans:400" 
-  )
+	meta(charset='utf-8')
+	meta(
+		name='viewport'
+		content='width=device-width, initial-scale=1.0'
+	)
+	title illusion
+	link(
+		rel='stylesheet'
+		href=path.src.css
+	)
+	link(
+		rel='stylesheet'
+		href=path.src.sprite
+	)
+	script(src="js/jquery-3.2.1.min.js")
+	script(src="js/masonry.pkgd.min.js")			
+	script(src="js/user.js")
