--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -6,27 +6,78 @@ include var/mixins.pug
 html
 	include includes/head.pug
 	body 
-		div.wrapper
+		.wrapper
 			header.header
-				.logo
+				.header__logo
 					p illusion
 				nav
-					ul.menu
+					ul.header__menu
+						li
+							a(href="")
+								p Home
+								.chevron
+									i.sprite.sprite-chevron
+						li
+							a(href="")
+								p Pages
+								.chevron
+									i.sprite.sprite-chevron
+						li
+							a(href="") 
+								p Portfolio
+								.chevron
+									i.sprite.sprite-chevron
+						li
+							a(href="")
+								p Blog
+								.chevron
+									i.sprite.sprite-chevron
+						li
+							a(href="") 
+								p Features
+								.chevron
+									i.sprite.sprite-chevron
+						li
+							a(href="") 
+								p Shortcodes
+								.chevron
+									i.sprite.sprite-chevron
+				.header__search
+					button.header__search_button
+						i.sprite.sprite-search
+					input.hidden(type="text")
+			.banner
+				h1 3 Column Sortable Masonry Portfolio
+				.banner__breadCrumbs
+					ul.banner__crumbs
 						li
 							a(href="") Home
 						li
-							a(href="") Pages
-						li
 							a(href="") Portfolio
 						li
-							a(href="") Blog
+							a(href="") Sortable Masonry
 						li
-							a(href="") Features
-						li
-							a(href="") Shortcodes
-				.search
-					input(type="text")
-//						+ image("image4.jpg", "image4")
-//						h3.item__header Similique sunt in culpa qui officia 
-//						p.item__par Deserunt mollitia animi, id est laborum et dolorum fuga.
-//						a.item__link(href="") Read More
+							a(href="") 3 Columns					
+//i.sprite.sprite-chevron
+//i.sprite.sprite-dribble
+//i.sprite.sprite-facebook
+//i.sprite.sprite-flick
+//i.sprite.sprite-g_
+//i.sprite.sprite-in
+//i.sprite.sprite-inst
+//i.sprite.sprite-mail
+//i.sprite.sprite-phone
+//i.sprite.sprite-pinterest
+//i.sprite.sprite-position
+//i.sprite.sprite-search
+//i.sprite.sprite-skype
+//i.sprite.sprite-twitter
+//i.sprite.sprite-vimeo
+//i.sprite.sprite-youtube
+						
+						
+						
+	//						+ image("image4.jpg", "image4")
+	//						h3.item__header Similique sunt in culpa qui officia 
+	//						p.item__par Deserunt mollitia animi, id est laborum et dolorum fuga.
+	//						a.item__link(href="") Read More
