--- a/app/pug/var/global.pug
+++ b/app/pug/var/global.pug
@@ -4,6 +4,6 @@
 		src: {
 		css:  'css/main.css',
 		sprite: 'css/sprite.css',
-		img: 'assets/imgages/'
+		img: 'assets/images/'
 		}      
 		};  
