--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -9,7 +9,8 @@ html
 		.wrapper
 			header.header
 				.header__logo
-					p illusion
+					a(href="")
+						p illusion
 				nav
 					ul.header__menu
 						li
@@ -57,7 +58,39 @@ html
 						li
 							a(href="") Sortable Masonry
 						li
-							a(href="") 3 Columns					
+							a(href="") 3 Columns
+			.mainContent
+				ul.mainContent__list
+					li
+						a(href="") All
+					li
+						a(href="") 3D
+					li
+						a(href="") Illustration
+					li
+						a(href="") Photography
+					li
+						a(href="") Web
+			.masonryContainer
+				.grid
+					.grid-item
+						+ image("img1.jpg", "image1")
+					.grid-item
+						+ image("img2.jpg", "image2")
+					.grid-item
+						+ image("img3.jpg", "image3")
+					.grid-item
+						+ image("img7.jpg", "image7")
+					.grid-item
+						+ image("img5.jpg", "image5")
+					.grid-item
+						+ image("img4.jpg", "image4")
+					.grid-item
+						+ image("img6.jpg", "image6")
+
+	script(src="js/jquery-3.2.1.min.js")
+	script(src="js/masonry.pkgd.min.js")
+	script(src="js/user.js")
 //i.sprite.sprite-chevron
 //i.sprite.sprite-dribble
 //i.sprite.sprite-facebook
