--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -143,6 +143,7 @@ html {
 	background: -webkit-linear-gradient(#7b28b1, #35eef6);
 	background:    -moz-linear-gradient(#7b28b1, #35eef6);
 	background:         linear-gradient(to right, #7b28b1, #35eef6);
+	margin-bottom: 7rem;
 	h1 {
 		font: 6rem/6rem  "LatoLight";
 		color: #fff;
@@ -165,5 +166,43 @@ html {
 			}
 		}
 	}
-
+}
+.mainContent {
+	width: 550px;
+	margin: 0 auto;
+	margin-bottom: 3rem;
+}
+.mainContent__list {
+	display: flex;
+	li {
+		a {
+			font: 1.4rem/2.4rem "LatoRegular";
+			color: #34383d;
+			padding: .5rem 2.9rem;
+			border-top: 1px solid grey;
+			border-bottom: 1px solid grey;
+			border-left: 1px solid grey;
+		}
+		a:hover {
+			color: #fff;
+			background-color: #41bedd;
+		}
+		&:nth-of-type(5) a{
+			border-right: 1px solid grey;
+			border-radius: 0 5px 5px 0;
+		}
+		&:nth-of-type(1) a{
+			border-radius: 5px 0 0 5px;
+		}
+	}
+}
+.masonryContainer {
+	max-width: 1170px;
+	margin: 0 auto;
+	.grid-item {
+		margin-bottom: 3rem;
+		img {
+			border-radius: 5px;
+		}
+	}
 }
