--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -81,15 +81,22 @@ html {
 	flex: 9;
 }
 /*-------------------------------------------end-----------------------------------------------*/
-
+.clear {
+	clear: both;
+}
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	max-width: 1170px;
-	margin: auto;
-	padding: 2.8rem 0;
-//	margin-bottom: .5rem;
+	background: #fff;
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
+	.fixedTop {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 2.8rem 0;
+		max-width: 1170px;
+		margin: 0 auto;
+	}
 	.header__logo {
 		margin-right: 31rem;
 		p {
@@ -122,10 +129,14 @@ html {
 				&:hover {
 					color: #41bedd;
 				}
+				
 				}
 				.chevron {
 					margin-top: 9px;
 				}
+			}
+			&:last-child {
+				margin-right: 3rem;
 			}
 		}
 	}
@@ -136,6 +147,8 @@ html {
 	}
 }
 .banner {
+	position: relative;
+	top: 98px;
 	text-align: center;
 	width: 100%;
 	height: 300px;
@@ -143,7 +156,8 @@ html {
 	background: -webkit-linear-gradient(#7b28b1, #35eef6);
 	background:    -moz-linear-gradient(#7b28b1, #35eef6);
 	background:         linear-gradient(to right, #7b28b1, #35eef6);
-	margin-bottom: 7rem;
+	margin-bottom: 17rem;
+//	padding-top: 7rem;
 	h1 {
 		font: 6rem/6rem  "LatoLight";
 		color: #fff;
@@ -151,58 +165,158 @@ html {
 		margin-bottom: 1rem;
 	}
 	.banner__breadCrumbs {
-		width: 400px;
-		margin: 0 auto;
+		width: 100%;
+		position: relative;
 			.banner__crumbs {
-			width: 100%;
-			margin: 0 auto;
+			justify-content: center;
 			display: flex;
 			li {
-				margin-right: 2rem;
+				margin-right: 1rem;
 				a {
 					font: 1.6rem/2.4rem "LatoRegular";
 					color: #ecf0f1;
+					img {
+						padding-left: 1rem;
+					}
 				}
 			}
 		}
 	}
 }
 .mainContent {
-	width: 550px;
-	margin: 0 auto;
-	margin-bottom: 3rem;
-}
-.mainContent__list {
-	display: flex;
-	li {
-		a {
-			font: 1.4rem/2.4rem "LatoRegular";
-			color: #34383d;
-			padding: .5rem 2.9rem;
-			border-top: 1px solid grey;
-			border-bottom: 1px solid grey;
-			border-left: 1px solid grey;
+	width: 100%;
+	position: relative;
+	.mainContent__list {
+		display: flex;
+		justify-content: center;
+		margin-bottom: 3rem;
+		li {
+
+			a {
+				font: 1.4rem/2.4rem "LatoRegular";
+				color: #34383d;
+				padding: .5rem 2.9rem;
+				border-top: 1px solid grey;
+				border-bottom: 1px solid grey;
+				border-left: 1px solid grey;
+			}
+			a:hover {
+				color: #fff;
+				background-color: #41bedd;
+			}
+			&:nth-of-type(5) a{
+				border-right: 1px solid grey;
+				border-radius: 0 5px 5px 0;
+			}
+			&:nth-of-type(1) a{
+				border-radius: 5px 0 0 5px;
+			}
 		}
-		a:hover {
-			color: #fff;
+	}
+	.masonryContainer {
+		max-width: 1170px;
+		margin: 0 auto;
+		.grid-item {
+			margin-bottom: 3rem;
+			img {
+				border-radius: 5px;
+			}
+		}
+	}
+	.load {
+		width: 125px;
+		margin: 0 auto;
+		text-align: center;
+		font: 1.4rem/2.4rem "LatoRegular";
+		color: #34383d;
+		padding: 0.5rem 0;
+		border: 1px solid grey;
+		border-radius: 5px;
+		margin-bottom: 7rem;
+		&:hover {
 			background-color: #41bedd;
-		}
-		&:nth-of-type(5) a{
-			border-right: 1px solid grey;
-			border-radius: 0 5px 5px 0;
-		}
-		&:nth-of-type(1) a{
-			border-radius: 5px 0 0 5px;
+			color: #fff;
 		}
 	}
 }
-.masonryContainer {
-	max-width: 1170px;
-	margin: 0 auto;
-	.grid-item {
-		margin-bottom: 3rem;
-		img {
-			border-radius: 5px;
+.footer {
+	position: relative;
+	border-top: 1px solid #cbd0d4;
+	background-color: #ecf0f1;
+	.up {
+		position: absolute;
+		right: 100px;
+		top: 30px;
+	}
+	.arr {
+//		height: 70px;
+		border-top: 1px solid #cbd0d4;
+		background-color: #e3e7e9;
+		p {
+			text-align: center;
+			color: #899096;
+			padding: 3rem 0;
 		}
+	}
+	.footerWrap{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-flow: wrap;
+		height: 230px;
+		max-width: 1170px;
+		margin: 0 auto;
+		i {
+			float: left;
+		}
+		.address {
+			i {
+				margin-top: 5.5rem;
+			}
+			p {
+				margin-left: 3rem;
+				margin-top: 5.5rem;
+				margin-bottom: 1.5rem;
+			}
+			a {
+				width: 190px;
+				padding: 0.5rem 0;
+				text-align: center;
+				font:600 1.4rem/2.4rem "LatoRegular";
+				color: #34383d;
+				
+				border: 1px solid grey;
+				border-radius: 5px;
+				&:hover {
+					border-color: #a255c4;
+					color: #a255c4;
+				}
+			}
+		}
+		.contact {
+			i {
+				margin-bottom: 1rem;
+			}
+			p {
+				margin-left: 3rem;
+			}
+		}
+		.connect {
+			i {
+				margin-right: 1rem;
+				margin-bottom: 1rem;
+				&:hover {
+					cursor: pointer;
+				}
+			}
+		}
+	}
+	h2 {
+		font: 2rem/5.5rem "LatoLight";
+		color: #34383d;
+	}
+	p {
+		font: 1.6rem/2.4rem "LatoLight";
+		color: #606366;
 	}
 }
