--- a/app/css/main.css
+++ b/app/css/main.css
@@ -86,13 +86,12 @@ html {
   z-index: 9999; }
   .header .fixedTop {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 2.8rem 0;
     max-width: 1170px;
     margin: 0 auto; }
   .header .header__logo {
-    margin-right: 31rem; }
+    margin-right: 34rem; }
     .header .header__logo p {
       padding: .5rem 0;
       font: 3.6rem/2rem "LatoLight";
@@ -105,10 +104,13 @@ html {
     display: flex;
     justify-content: flex-start; }
     .header .header__menu li {
-      margin-right: 4.2rem; }
+      margin-right: 4.2rem;
+      position: relative; }
       .header .header__menu li:last-child {
         margin-right: 0; }
       .header .header__menu li a {
+        padding: 3.8rem 0;
+        position: relative;
         display: flex;
         justify-content: flex-start; }
         .header .header__menu li a p {
@@ -121,8 +123,31 @@ html {
             color: #41bedd; }
         .header .header__menu li a .chevron {
           margin-top: 9px; }
+      .header .header__menu li:hover {
+        border-bottom: 2px solid #3fb8d6; }
+      .header .header__menu li:hover .subMenu {
+        display: block; }
       .header .header__menu li:last-child {
         margin-right: 3rem; }
+    .header .header__menu .subMenu {
+      display: none;
+      position: absolute;
+      top: 9.8rem;
+      left: -20px;
+      background-color: #fff;
+      width: 220px; }
+      .header .header__menu .subMenu li {
+        border-top: 1px solid grey;
+        width: 100%; }
+        .header .header__menu .subMenu li a {
+          padding: 0; }
+        .header .header__menu .subMenu li p {
+          font: 1.6rem/4.3rem "LatoLight";
+          color: #34383d;
+          padding-left: 2rem; }
+        .header .header__menu .subMenu li .chevron i {
+          transform: rotate(-90deg);
+          margin-top: 1.1rem; }
   .header .header__search button:hover {
     cursor: pointer; }
 
@@ -194,7 +219,8 @@ html {
     padding: 0.5rem 0;
     border: 1px solid grey;
     border-radius: 5px;
-    margin-bottom: 7rem; }
+    margin-bottom: 7rem;
+    margin-top: 1.5rem; }
     .mainContent .load:hover {
       background-color: #41bedd;
       color: #fff; }
