--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -19,31 +19,187 @@ html
 									p Home
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 							li
 								a(href="")
 									p Pages
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 							li
 								a(href="") 
 									p Portfolio
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 							li
 								a(href="")
 									p Blog
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 							li
 								a(href="") 
 									p Features
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 							li
 								a(href="") 
 									p Shortcodes
 									.chevron
 										i.sprite.sprite-chevron
+								ul.subMenu
+									li
+										a(href="") 
+											p Classic
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid with text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable grid without text
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="")
+											p Sortable masonry
+											.chevron
+												i.sprite.sprite-chevron
+									li
+										a(href="") 
+											p Single project pages
+											.chevron
+												i.sprite.sprite-chevron
 					.header__search
 						button.header__search_button
 							i.sprite.sprite-search
