--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -287,7 +287,9 @@ html {
 		top: 30px;
 	}
 	.arr {
-//		height: 70px;
+		position: relative;
+		bottom: 0;
+		width: 100%;
 		border-top: 1px solid #cbd0d4;
 		background-color: #e3e7e9;
 		p {
@@ -356,5 +358,30 @@ html {
 	p {
 		font: 1.6rem/2.4rem "LatoLight";
 		color: #606366;
+	}
+}
+@media screen and (max-width: 767px) {
+	.header {
+		.fixedTop {
+			max-width: 767px;
+		}
+		.header__menu {
+			display: none;
+		}
+		.header__logo {
+			margin-right: 0;
+		}
+	}
+	.masonryContainer {
+		.grid {
+			.grid-item {
+				img {
+					width: 320px;
+				}
+			}
+		}	
+	}
+	.mainContent__list {
+		flex-flow: column;
 	}
 }
