--- a/app/css/main.css
+++ b/app/css/main.css
@@ -67,13 +67,13 @@ html {
   flex: 9; }
 
 .col-10 {
-  flex: 9; }
+  flex: 10; }
 
 .col-11 {
-  flex: 9; }
+  flex: 11; }
 
 .col-12 {
-  flex: 9; }
+  flex: 12; }
 
 /*-------------------------------------------end-----------------------------------------------*/
 .clear {
@@ -84,6 +84,8 @@ html {
   position: fixed;
   width: 100%;
   z-index: 9999; }
+  .header .header__search_area {
+    display: none; }
   .header .fixedTop {
     display: flex;
     justify-content: space-between;
@@ -231,11 +233,9 @@ html {
   background-color: #ecf0f1; }
   .footer .up {
     position: absolute;
-    right: 100px;
-    top: 30px; }
+    right: 2%;
+    top: -42px; }
   .footer .arr {
-    position: relative;
-    bottom: 0;
     width: 100%;
     border-top: 1px solid #cbd0d4;
     background-color: #e3e7e9; }
@@ -245,40 +245,46 @@ html {
       padding: 3rem 0; }
   .footer .footerWrap {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-flow: wrap;
-    height: 230px;
     max-width: 1170px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    padding-bottom: 2rem; }
     .footer .footerWrap i {
       float: left; }
-    .footer .footerWrap .address i {
-      margin-top: 5.5rem; }
-    .footer .footerWrap .address p {
-      margin-left: 3rem;
-      margin-top: 5.5rem;
-      margin-bottom: 1.5rem; }
-    .footer .footerWrap .address a {
-      width: 190px;
-      padding: 0.5rem 0;
-      text-align: center;
-      font: 600 1.4rem/2.4rem "LatoRegular";
-      color: #34383d;
-      border: 1px solid grey;
-      border-radius: 5px; }
-      .footer .footerWrap .address a:hover {
-        border-color: #a255c4;
-        color: #a255c4; }
-    .footer .footerWrap .contact i {
-      margin-bottom: 1rem; }
-    .footer .footerWrap .contact p {
-      margin-left: 3rem; }
-    .footer .footerWrap .connect i {
-      margin-right: 1rem;
-      margin-bottom: 1rem; }
-      .footer .footerWrap .connect i:hover {
-        cursor: pointer; }
+    .footer .footerWrap .aboutUs {
+      width: 40%; }
+    .footer .footerWrap .address {
+      width: 20%; }
+      .footer .footerWrap .address i {
+        margin-top: 5.5rem; }
+      .footer .footerWrap .address p {
+        margin-left: 3rem;
+        margin-top: 5.5rem;
+        margin-bottom: 1.5rem; }
+      .footer .footerWrap .address a {
+        width: 190px;
+        padding: 0.5rem 0;
+        text-align: center;
+        font: 600 1.4rem/2.4rem "LatoRegular";
+        color: #34383d;
+        border: 1px solid grey;
+        border-radius: 5px; }
+        .footer .footerWrap .address a:hover {
+          border-color: #a255c4;
+          color: #a255c4; }
+    .footer .footerWrap .contact {
+      width: 20%; }
+      .footer .footerWrap .contact i {
+        margin-bottom: 1rem; }
+      .footer .footerWrap .contact p {
+        margin-left: 3rem; }
+    .footer .footerWrap .connect {
+      width: 20%; }
+      .footer .footerWrap .connect i {
+        margin-right: 1rem;
+        margin-bottom: 1rem; }
+        .footer .footerWrap .connect i:hover {
+          cursor: pointer; }
   .footer h2 {
     font: 2rem/5.5rem "LatoLight";
     color: #34383d; }
@@ -286,14 +292,86 @@ html {
     font: 1.6rem/2.4rem "LatoLight";
     color: #606366; }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .header .fixedTop {
-    max-width: 767px; }
+    position: relative;
+    max-width: 767px;
+    justify-content: center; }
   .header .header__menu {
     display: none; }
   .header .header__logo {
-    margin-right: 0; }
+    margin-right: 20%; }
+  .header .header__search_area {
+    display: block;
+    position: absolute;
+    height: 30px;
+    right: -55%; }
   .masonryContainer .grid .grid-item img {
-    width: 320px; }
+    width: 100%; }
   .mainContent__list {
-    flex-flow: column; } }
+    flex-flow: column; }
+  /*----------------------------------mobileMenu-----------------------------------------*/
+  .header .header__menuButton {
+    margin-bottom: 1rem;
+    padding: .6rem;
+    position: absolute;
+    left: 1rem;
+    top: 1rem;
+    border-top: 3px solid #41bedd;
+    border-bottom: 3px solid #41bedd;
+    display: block;
+    height: 20px;
+    width: 30px; }
+  .header .header__menuButton::before {
+    content: '';
+    height: 3px;
+    width: 30px;
+    position: absolute;
+    top: 6px;
+    left: 0;
+    background: #41bedd; }
+  /*------------------------------------------end--------------------------------------------*/
+  .mainContent .mainContent__list li:nth-of-type(1) a {
+    border-radius: 5px; }
+  .mainContent .mainContent__list li a {
+    border-right: 1px solid grey;
+    border-bottom: 0;
+    border-radius: 5px; }
+  .mainContent .mainContent__list li:nth-of-type(5) a {
+    border-bottom: 1px solid grey;
+    border-radius: 5px; }
+  .footer .footerWrap {
+    flex-flow: column; }
+    .footer .footerWrap .aboutUs {
+      padding-left: 1rem;
+      width: 100%;
+      margin: 0 auto; }
+    .footer .footerWrap .address {
+      padding-left: 1rem;
+      width: 100%;
+      margin: 0 auto; }
+    .footer .footerWrap .contact {
+      padding-left: 1rem;
+      width: 100%;
+      margin: 0 auto; }
+    .footer .footerWrap .connect {
+      padding-left: 1rem;
+      width: 100%;
+      margin: 0 auto; }
+  .banner {
+    height: 450px;
+    margin-bottom: 9.8rem; }
+    .banner .banner__breadCrumbs {
+      width: 100%;
+      position: relative; }
+      .banner .banner__breadCrumbs .banner__crumbs {
+        justify-content: center;
+        display: flex;
+        flex-flow: wrap; }
+        .banner .banner__breadCrumbs .banner__crumbs li {
+          margin-right: 1rem; }
+          .banner .banner__breadCrumbs .banner__crumbs li a {
+            font: 1.6rem/2.4rem "LatoRegular";
+            color: #ecf0f1; }
+            .banner .banner__breadCrumbs .banner__crumbs li a img {
+              padding-left: 1rem; } }
